# NutritionalPartner

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  cybersec_report.md  implementation_plan.md  pyproject.toml
.agents/rules/: architecture-guide.md  backend-guide.md  coding-guide.md  cybersecurity-guide.md  development-guide.md  devops-guide.md  frontend-guide.md  tests-guide.md
.agents/skills/architecture-planning/: SKILL.md
.agents/skills/deployment/: SKILL.md
.agents/skills/prototyping-logic/: SKILL.md
.agents/skills/security-audit/: SKILL.md
.claude/agent-memory/cybersec-sentinel/: MEMORY.md  project_smae_security_patterns.md
.claude/agents/: backend-dev-specialist.md  cybersec-sentinel.md  devops-engineer.md  senior-frontend-dev.md  software-architect.md  test-runner.md
.devcontainer/: devcontainer.json  setup-ssh.sh
backend/: README.md  pyproject.toml
backend/.claude/agent-memory/cybersec-sentinel/: MEMORY.md  project_smae_audit.md
backend/.claude/agent-memory/devops-engineer/: project_smae_engine_stage2.md
backend/notebooks/smae_engine/: smae_extraction_verify.ipynb
backend/smae_engine/: README.md  smae_extraction_verify.ipynb
backend/smae_engine/deployment/: Dockerfile  backend.tf  cloudbuild-cd.yaml  cloudbuild-ci.yaml  main.tf  terraform.tfvars  vars.tf
backend/smae_engine/source_code/: config.py  create_resources.sh  delete_resources.sh  main.py  pipeline.py  pyproject.toml  schemas.py
backend/smae_engine/source_code/bq_service/: __init__.py  main.py  schemas.py
backend/smae_engine/source_code/gcs_service/: __init__.py  main.py  schemas.py
backend/smae_engine/source_code/gemini_service/: __init__.py  main.py  schemas.py
docs/modules/: bootstrap.md  smae_engine.md
docs/system/: agent_memory_and_protocols.md
infra/: README.md  ci-lint.yaml
infra/scripts/: bootstrap.sh  cleanup.sh  create_cicd_triggers.sh
infra/shared_resources/: backend.tf  main.tf  terraform.tfvars  vars.tf
notebooks/smae_engine/: smae_extraction_verify.ipynb
scratch/: check_pdf.py
(+6 files in other folders)
