[project]
name = "nutritional-partner-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
smae-engine = [
    "pydantic",
    "pydantic-settings",
    "loguru",
    "pypdf",
    "google-genai",
    "google-cloud-storage",
    "google-cloud-bigquery",
]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "ipykernel",
    "pandas",
    "db-dtypes"
]
