[project]
name = "nutritional-partner-backend"
version = "0.1.0"
description = "Backend for the Nutritional Partner project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[dependency-groups]
smae = [
    "google-auth>=2.49.2",
    "pypdf>=4.0.0",
    "google-cloud-storage>=2.0.0",
    "google-genai>=1.73.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.0.0",
    "google-cloud-bigquery>=3.41.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = ["pytest>=9.0.3", "pytest-mock>=3.0.0"]

[tool.pytest.ini_options]
pythonpath = [".."]
